// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Input Component Input snapshot 1`] = `
<input
  className="mo-input mo-input--normal"
  onChange={[Function]}
  onKeyDown={[Function]}
  placeholder="basic usage"
  type="text"
/>
`;

exports[`Test Input Component The Input snapshot 1`] = `
<input
  className="mo-input mo-input--normal"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  placeholder="basic usage"
/>
`;
